<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/ibBrushSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/brush_small"
        android:src="@drawable/brush_small"
        app:layout_constraintBottom_toTopOf="@+id/ibBrushMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibBrushMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/brush_medium"
        android:src="@drawable/brush_medium"
        app:layout_constraintBottom_toTopOf="@+id/ibBrushLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibBrushSmall" />

    <ImageButton
        android:id="@+id/ibBrushLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/brush_large"
        android:src="@drawable/brush_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibBrushMedium" />
</androidx.constraintlayout.widget.ConstraintLayout>