<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="canvas"
            type="com.anibalventura.likepaint.ui.canvas.CanvasFragment" />

        <variable
            name="drawing"
            type="com.anibalventura.likepaint.ui.canvas.DrawingView" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <FrameLayout
            android:id="@+id/flDrawingViewContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:background="@drawable/bg_drawing_view"
            android:padding="1dp"
            app:layout_constraintBottom_toTopOf="@+id/cvToolsPanel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread">

            <ImageView
                android:id="@+id/ivBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_background"
                android:scaleType="fitCenter" />

            <com.anibalventura.likepaint.ui.canvas.DrawingView
                android:id="@+id/drawingView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#80FFFFFF" />

        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvToolsPanel"
            style="@style/CardViewTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flDrawingViewContainer">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <HorizontalScrollView
                    android:id="@+id/hsvRight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:scrollbarSize="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ibMoveRight"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/ibBrushSize"
                            style="@style/ToolsButtonTheme"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="4dp"
                            android:contentDescription="@string/brush_button"
                            android:longClickable="true"
                            android:onClick="@{() -> canvas.brush()}"
                            android:src="@drawable/ic_brush" />

                        <ImageButton
                            android:id="@+id/ibEraseDraw"
                            style="@style/ToolsButtonTheme"
                            android:layout_marginEnd="4dp"
                            android:contentDescription="@string/erase_draw_button"
                            android:longClickable="true"
                            android:onClick="@{() -> canvas.eraser()}"
                            android:src="@drawable/ic_eraser" />

                        <ImageButton
                            android:id="@+id/ibUndoDraw"
                            style="@style/ToolsButtonTheme"
                            android:layout_marginEnd="4dp"
                            android:contentDescription="@string/undo_draw_button"
                            android:onClick="@{() -> drawing.undoPath()}"
                            android:src="@drawable/ic_undo" />

                        <ImageButton
                            android:id="@+id/ibRedoDraw"
                            style="@style/ToolsButtonTheme"
                            android:layout_marginEnd="4dp"
                            android:contentDescription="@string/redo_draw_button"
                            android:onClick="@{() -> drawing.redoPath()}"
                            android:src="@drawable/ic_redo" />

                        <ImageButton
                            android:id="@+id/ibBrushColor"
                            style="@style/ToolsButtonTheme"
                            android:layout_marginEnd="4dp"
                            android:contentDescription="@string/brush_color_button"
                            android:onClick="@{() -> canvas.brushColor()}"
                            android:src="@drawable/ic_palette" />

                        <ImageButton
                            android:id="@+id/ibBackgroundImage"
                            style="@style/ToolsButtonTheme"
                            android:layout_marginEnd="4dp"
                            android:contentDescription="@string/background_image_button"
                            android:onClick="@{() -> canvas.imageBackground()}"
                            android:src="@drawable/ic_image" />

                        <ImageButton
                            android:id="@+id/ibClearCanvas"
                            style="@style/ToolsButtonTheme"
                            android:layout_marginEnd="4dp"
                            android:contentDescription="@string/brush_color_button"
                            android:onClick="@{() -> drawing.clearDrawing()}"
                            android:src="@drawable/ic_clear" />

                        <ImageButton
                            android:id="@+id/ibShareDrawing"
                            style="@style/ToolsButtonTheme"
                            android:layout_marginEnd="4dp"
                            android:contentDescription="@string/share_drawing_button"
                            android:onClick="@{() -> canvas.shareDrawing()}"
                            android:src="@drawable/ic_share" />

                    </LinearLayout>
                </HorizontalScrollView>

                <ImageButton
                    android:id="@+id/ibMoveRight"
                    style="@style/ToolsButtonTheme"
                    android:background="@color/ScrollMoveBgColor"
                    android:contentDescription="@string/arrow_right_button"
                    android:onClick="@{() -> canvas.moveScroll(0)}"
                    android:src="@drawable/ic_arrow_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/hsvRight"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/ibMoveLeft"
                    style="@style/ToolsButtonTheme"
                    android:background="@color/ScrollMoveBgColor"
                    android:contentDescription="@string/arrow_right_button"
                    android:onClick="@{() -> canvas.moveScroll(1)}"
                    android:src="@drawable/ic_arrow_left"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/hsvRight"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>